--- a/ShareTripSDK/Classes/STFlightKit/Views/Details/TVCell/FlightSegmentCardCell.xib
+++ b/ShareTripSDK/Classes/STFlightKit/Views/Details/TVCell/FlightSegmentCardCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" rowHeight="423" id="KGk-i7-Jjw" customClass="FlightSegmentCardCell" customModule="ShareTrip" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" rowHeight="423" id="KGk-i7-Jjw" customClass="FlightSegmentCardCell" customModule="ShareTripSDK" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="372" height="460"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -457,13 +457,19 @@
                 <outlet property="airlinesLabel" destination="PM7-34-a7H" id="T1C-Cs-dLx"/>
                 <outlet property="arrivalAirportLabel" destination="FuV-xx-6aJ" id="6HX-fJ-NNp"/>
                 <outlet property="arrivalDateLabel" destination="4Id-7d-zy8" id="eN8-BM-omQ"/>
+                <outlet property="arrivalImageView" destination="1hY-QZ-Qr5" id="hQt-a4-K2l"/>
                 <outlet property="arrivalTimeLabel" destination="ESb-j6-AQQ" id="HRR-zu-33v"/>
                 <outlet property="classLabel" destination="Mqh-Wg-wfa" id="sNZ-G3-lFm"/>
+                <outlet property="clockImageView" destination="BXb-1o-ZIX" id="sRM-h5-Lwp"/>
                 <outlet property="departAirportLabel" destination="1L5-IY-Y0O" id="F6B-2R-8ht"/>
                 <outlet property="departDateLabel" destination="Afl-b7-DdO" id="MFm-AY-QJQ"/>
                 <outlet property="departTimeLabel" destination="gmG-Kd-lBp" id="crc-As-pwU"/>
+                <outlet property="departureImageView" destination="V8R-Ze-I4X" id="oDG-cL-A7o"/>
                 <outlet property="durationLabel" destination="tkh-rZ-w8P" id="btZ-xa-x1Z"/>
+                <outlet property="flightNumberImageView" destination="7bD-zV-SeA" id="giF-GE-BFY"/>
                 <outlet property="layoverView" destination="qvk-cv-CQT" id="8Mx-k0-yq2"/>
+                <outlet property="planeRightImageView" destination="iqK-PK-POm" id="9Lo-dS-jDh"/>
+                <outlet property="seatImageView" destination="CB6-cX-SGN" id="Qrs-bu-cmC"/>
                 <outlet property="segmentContainerView" destination="awL-Nx-zfO" id="Jmr-yG-qjA"/>
                 <outlet property="technicalStoppageLabel" destination="WeA-Gm-mDG" id="3dw-Lh-QcS"/>
                 <outlet property="technicalStoppageView" destination="pAV-s6-EOF" id="CbW-3G-sCY"/>
