--- a/ShareTripSDK/Classes/STCoreKit/TravelAdvice/View/ExploreDestinationTVCell.xib
+++ b/ShareTripSDK/Classes/STCoreKit/TravelAdvice/View/ExploreDestinationTVCell.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExploreDestinationTVCell" rowHeight="122" id="KGk-i7-Jjw" customClass="ExploreDestinationTVCell" customModule="ShareTrip" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExploreDestinationTVCell" rowHeight="122" id="KGk-i7-Jjw" customClass="ExploreDestinationTVCell" customModule="ShareTripSDK" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="389" height="122"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -80,6 +80,7 @@ Q2FuIEkgdHJhdmVsIHRvLi4uED8
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="containerView" destination="1pE-7d-HV9" id="XgK-yo-ABL"/>
+                <outlet property="goIconImageView" destination="GXJ-WJ-dWz" id="YMk-Er-LsM"/>
                 <outlet property="iconImageView" destination="GXJ-WJ-dWz" id="oFO-BD-kb7"/>
                 <outlet property="subtitleLabel" destination="JE1-fs-Roq" id="vIr-p8-FNb"/>
                 <outlet property="titleLabel" destination="8Ov-xB-U65" id="4ib-R6-uEw"/>
